--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 128px;
 }
 
 h2 {
@@ -59,11 +59,13 @@ header {
 h1 {
   margin-bottom: 24px;
   font-size: 44px;
+  line-height: 1.3;
 }
 
 .header-text {
   margin-bottom: 24px;
   font-size: 20px;
+  line-height: 1.6;
 }
 
 img {
@@ -81,6 +83,7 @@ img {
 
 .features-text {
   font-size: 20px;
+  line-height: 1.6;
 }
 
 /* TESTIMONIAL */
@@ -101,6 +104,7 @@ img {
   font-style: italic;
   margin-bottom: 24px;
   font-size: 20px;
+  line-height: 1.6;
 }
 
 .testimonial-author {
