--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ section {
 }
 
 h2 {
-  margin-bottom: 48px;
+  margin-bottom: 80px;
   font-size: 36px;
 }
 
@@ -76,7 +76,7 @@ img {
 /* FEATURES */
 
 .features-title {
-  margin-bottom: 16px;
+  margin-bottom: 32px;
   font-size: 24px;
 }
 
@@ -90,7 +90,7 @@ img {
   width: 40px;
   height: 40px;
   display: block;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 /* TESTIMONIAL */
@@ -98,6 +98,11 @@ img {
   background-color: #087f5b;
   padding: 32px;
   color: #fff;
+  border-radius: 30px;
+}
+
+.testimonial-section img {
+  border-radius: 25px;
 }
 
 .testimonial-box {
@@ -123,7 +128,14 @@ img {
 
 /* CHAIRS */
 .chair {
-  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.324);
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.324);
+  border-radius: 20px;
+}
+
+.chair img {
+  border-radius: 20px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .chair-box {
@@ -164,6 +176,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   font-size: 24px;
+  align-items: center;
 }
 
 footer {
